testsuite/tests/patsyn/should_fail/import-syntax.hs
{-# LANGUAGE PatternSynonyms #-}
module Foo where

import ImportSyntax (A(.., B))
