testsuite/tests/patsyn/should_fail/import-syntax.stderr

import-syntax.hs:4:22: error:
    Illegal import form, this syntax can only be used to bundle pattern synonyms with types in module exports.
